# lucu

./: .gitignore  Cargo.toml  README.md  alloc.lucu  async.lucu  build.sh  build_wasm.sh  div.lucu  example.lucu  flake.nix  lib.c  link.sh  todo.txt  wasm.sh  watch.sh
.github/workflows/: ci.yml  rust.yml
core/: preamble.lucu
core/io/: reader.lucu  stdio.lucu  writer.lucu
core/math/: series.lucu
core/mem/: alloc.lucu
core/os/: process.lucu
core/preamble/: controlflow.lucu  internal.lucu  map.lucu  trap.lucu  yield.lucu
drafts/: buffer.lucu  encoding.lucu  result.lucu
examples/: .gitignore  42.lucu  alloc.lucu  brainfuck.lucu  buffer.lucu  conway.lucu  counter.lucu  ctime.lucu  debug.lucu  div.lucu  echo.lucu  err.lucu  factorial.lucu  hello.lucu  implicit.lucu  iter.lucu  lambda_calculus.lucu  mapfilterfold.lucu  mod.lucu  naked.lucu  nonzero.lucu  panic.lucu  printget.lucu  recursive_effect.lucu  rule110.lucu  setter.lucu  simple_effect.lucu  slice.lucu  strbuffer.lucu  write_buffer.lucu  xcb.lucu  yeet.lucu
examples/nt/: echo.lucu
examples/unix/: echo.lucu  syscall.lucu
examples/wasm/: hello.js  hello.lucu
lucu/: group.lucu  preamble.lucu  yield.lucu
parcelr/: Cargo.toml
parcelr/src/: lib.rs
public/: index.html  runtime.js
src/: analyzer.rs  compiler.rs  docgen.rs  error.rs  ir.rs  lexer.rs  llvm.rs  main.odin  main.rs  parser.rs  tree.rs  vecmap.rs  vm.rs
src/ast/: ast.odin  mod.rs  parser.rs
src/ir/: codegen.rs  mod.rs
src/lexer/: lexer.rs  mod.rs  token.odin  tokenizer.rs  tokens.rs
src/parser/: ast.rs  (+9 more)
test/: parse_array.lucu
(+15 files in other folders)
