[package]
name = "lucu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace-on-stack-overflow = "0.3.0"
clap = { version = "4.4.7", features = ["derive"] }
either = "1.9.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }
llvm-sys-150 = { package = "llvm-sys", version = "150.1.2", features = ["prefer-static"] }
