[package]
name = "lucu"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace-on-stack-overflow = "0.3.0"
clap = { version = "4.5.17", features = ["derive"] }
inkwell = { version = "0.5.0", features = ["llvm18-0-prefer-static"] }
string-interner = "0.17.0"
strum = { version = "0.26.3", features = ["derive"] }
